HVAC experts section is completed

--- a/src/index.html
+++ b/src/index.html
@@ -321,7 +321,53 @@
     <!-- Families Like  card section is end -->
 
 
+<!-- HVAC Experts section is start -->
+<section class="py-16  max-w-6xl mx-auto text-center px-4">
+   <h2 class="text-4xl sm:text-xl text-center font-semibold mb-10">Your Trusted HVAC Experts</h2>
 
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mt-10 ">
+  
+
+  <!-- ISO 9001 -->
+  <div class="flex flex-col items-center">
+    <img src="/assets/images/image 2.png" alt="ISO 9001 Certified" class="w-20 sm:w-24 mb-3">
+    <p class="font-medium">ISO 9001 Certified</p>
+    <p class="text-sm text-gray-500">Quality Management for HVAC Excellence</p>
+  </div>
+
+  <!-- ISO 14001 -->
+  <div class="flex flex-col items-center">
+    <img src="/assets/images/image 3.png" alt="ISO 14001 Certified" class="w-20 sm:w-24 mb-3">
+    <p class="font-medium">ISO 14001 Certification</p>
+    <p class="text-sm text-gray-500">Eco-Friendly HVAC Solutions</p>
+  </div>
+
+</div>
+
+
+    <div class="grid grid-cols-3 sm::grid-cols-1 mt-10">
+      <!-- EPA -->
+    <div class="flex flex-col items-center">
+      <img src="/assets/images/empresa-certificada  .png" alt="EPA Certified" class="w-20 sm:w-24 mb-3">
+      <p class="font-medium">EPA Certified</p>
+    </div>
+
+    <!-- BBB -->
+    <div class="flex flex-col items-center">
+      <img src="/assets/images/Logo.png" alt="BBB Accredited" class="w-20 sm:w-24 mb-3">
+      <p class="font-medium">BBB Accredited</p>
+    </div>
+
+    <!-- NATE -->
+    <div class="flex flex-col items-center">
+      <img src="/assets/images/Layer_1.png" alt="NATE Certified" class="w-20 sm:w-24 mb-3">
+      <p class="font-medium">NATE Certified</p>
+    </div>
+    </div>
+
+  </div>
+</section>
+<!-- HVAC Experts section is end -->
 
     <!-- js -->
     <script src="./custom.js"></script>
