past work section is completed

--- a/src/index.html
+++ b/src/index.html
@@ -479,6 +479,80 @@
     </section>
     <!-- Benefits  section is end -->
 
+    <!-- Past Work section is start -->
+    <section class="px-4 py-12 max-w-7xl mx-auto">
+      <!-- Cards -->
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
+        <!-- Card 2 -->
+        <div class="p-4 rounded-xl">
+          <h3 class="font-semibold mb-1 text-4xl">
+            Past Work That Speaks for Itself
+          </h3>
+          <p class="text-sm mt-6">
+            Explore some of the outstanding HVAC projects we’ve proudly
+            completed. Every image reflects our unwavering commitment to
+            quality, reliability, and expert craftsmanship — from flawless
+            installations to seamless maintenance. These are just a few examples
+            of the exceptional results we deliver for homeowners like you.
+          </p>
+          <button
+            class="mt-12 bg-green-800 cursor-pointer hover:bg-green-700 text-white px-6 py-2 rounded"
+          >
+            Explore Our Work
+          </button>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="bg-green-700 text-white p-6 rounded-2xl">
+          <h3 class="font-semibold mb-2 ml-4">
+            Efficient Home Heating Upgrade
+          </h3>
+          <p class="text-sm mb-4 mx-4">
+            Installed a high-efficiency furnace system, reducing energy costs
+            and improving comfort for the homeowners.
+          </p>
+          <img
+            src="/assets/images/Frame 65.png"
+            alt="AC Repair"
+            class="rounded-lg w-full h-auto mx-auto mt-4"
+          />
+        </div>
+      </div>
+
+      <div class="grid grid-cols-1 mt-6 sm:grid-cols-2 gap-6">
+        <!-- Card 2 -->
+        <div class="bg-green-700 text-white p-6 rounded-2xl">
+          <h3 class="font-semibold mb-2 ml-4">
+            Complete HVAC System Installation
+          </h3>
+          <p class="text-sm mb-4 mx-4">
+            Designed and installed a full heating and cooling solution for a
+            newly built modern home.
+          </p>
+          <img
+            src="/assets/images/Frame 2.png"
+            alt="AC Repair"
+            class="rounded-lg w-full h-auto mx-auto mt-4"
+          />
+        </div>
+        <div class="bg-green-700 text-white p-6 rounded-2xl">
+          <h3 class="font-semibold mb-2 ml-4">
+            Emergency AC Repair & Restoration
+          </h3>
+          <p class="text-sm mb-4 mx-4">
+            Rapid response service that restored cooling during peak summer
+            heat, ensuring family comfort and safety.
+          </p>
+          <img
+            src="/assets/images/Frame 3.png"
+            alt="AC Repair"
+            class="rounded-lg w-full h-auto mx-auto mt-4"
+          />
+        </div>
+      </div>
+    </section>
+    <!-- Past Work section is end -->
+
 
 
     <!-- js -->
