We Bring Comfort section is completed

--- a/src/index.html
+++ b/src/index.html
@@ -593,6 +593,138 @@
     <!-- save big section is end -->
 
 
+        <!-- We Bring Comfort section is start -->
+    <section class="bg-white max-w-7xl mx-auto py-16 px-4">
+      <h2 class="text-sm md:text-4xl font-bold text-center mb-12">
+        How We Bring Comfort to Your Home
+      </h2>
+
+      <div class="myContainer">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- Card 1 -->
+          <div
+            class="bg-green-100 rounded-2xl shadow-md overflow-hidden flex flex-col h-full"
+          >
+            <!-- Image Section -->
+            <div class="relative">
+              <img
+                src="/assets/images/Subtract.png"
+                alt="Schedule"
+                class="w-full h-52 object-cover rounded-t-2xl"
+              />
+              <!-- Icon Box -->
+              <div
+                class="absolute bottom-3.5 left-3.5 bg-green-800 px-4 py-3 rounded-xl"
+              >
+                <p class="text-white">
+                  <i class="fa-solid fa-calendar-days"></i>
+                </p>
+              </div>
+            </div>
+
+            <!-- Text Content -->
+            <div class="pt-4 pb-2 px-4">
+              <h3 class="font-semibold text-lg mb-2">
+                Schedule a Consultation
+              </h3>
+              <p class="text-sm text-gray-600">
+                Contact us to book your free consultation with our HVAC experts.
+              </p>
+            </div>
+          </div>
+
+          <!-- Repeat the same for other cards -->
+          <!-- Card 2 -->
+          <div
+            class="bg-green-100 rounded-2xl shadow-md overflow-hidden flex flex-col h-full"
+          >
+            <div class="relative">
+              <img
+                src="/assets/images/Subtract2.png"
+                alt="Quote"
+                class="w-full h-52 object-cover rounded-t-2xl"
+              />
+              <div
+                class="absolute bottom-3.5 left-3.5 bg-green-800 px-4 py-3 rounded-xl"
+              >
+                <img
+                  src="/assets/images/license.svg"
+                  alt="icon"
+                  class="w-6 h-6"
+                />
+              </div>
+            </div>
+            <div class="pt-4 px-4">
+              <h3 class="font-semibold text-lg mb-2">Get a Custom Quote</h3>
+              <p class="text-sm text-gray-600">
+                We assess your needs and provide a clear, no-obligation quote.
+              </p>
+            </div>
+          </div>
+
+          <!-- Card 3 -->
+          <div
+            class="bg-green-100 rounded-2xl shadow-md overflow-hidden flex flex-col h-full"
+          >
+            <div class="relative">
+              <img
+                src="/assets/images/Subtract3.png"
+                alt="Installation"
+                class="w-full h-52 object-cover rounded-t-2xl"
+              />
+              <div
+                class="absolute bottom-3.5 left-3.5 bg-green-800 px-4 py-3 rounded-xl"
+              >
+                <img
+                  src="/assets/images/wrench-01.svg"
+                  alt="icon"
+                  class="w-6 h-6"
+                />
+              </div>
+            </div>
+            <div class="pt-4 px-4">
+              <h3 class="font-semibold text-lg mb-2">
+                Professional Installation
+              </h3>
+              <p class="text-sm text-gray-600">
+                Our certified team installs your system with precision and care.
+              </p>
+            </div>
+          </div>
+
+          <!-- Card 4 -->
+          <div
+            class="bg-green-100 rounded-2xl shadow-md overflow-hidden flex flex-col h-full"
+          >
+            <div class="relative">
+              <img
+                src="/assets/images/Subtract4.png"
+                alt="Comfort"
+                class="w-full h-52 object-cover rounded-t-2xl"
+              />
+              <div
+                class="absolute bottom-3.5 left-3.5 bg-green-800 px-4 py-3 rounded-xl"
+              >
+                <img
+                  src="/assets/images/home-09.svg"
+                  alt="icon"
+                  class="w-6 h-6"
+                />
+              </div>
+            </div>
+            <div class="pt-4 px-4">
+              <h3 class="font-semibold text-lg mb-2">Enjoy Total Comfort</h3>
+              <p class="text-sm text-gray-600">
+                Experience efficient heating and cooling all year round.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- We Bring Comfort section is end -->
+
+
 
     <!-- js -->
     <script src="./custom.js"></script>
