--- a/src/index.html
+++ b/src/index.html
@@ -725,6 +725,72 @@
     <!-- We Bring Comfort section is end -->
 
 
+        <!-- our hvac Services Section is start -->
+    <section class="bg-white py-16 px-4">
+      <div class="max-w-7xl mx-auto">
+        <h2 class="text-3xl font-bold text-center mb-12">Our HVAC Services</h2>
+        <div class="mx-auto grid md:grid-cols-3 gap-6">
+          <div class="bg-gray-50 p-4 rounded-xl">
+            <img
+              src="/assets/images/Frame 91.png"
+              alt="AC Install"
+              class="rounded mb-3"
+            />
+            <h3 class="font-semibold text-2xl mb-2">
+              Air Conditioner Installation
+            </h3>
+            <p class="text-base text-gray-600 mb-2">
+              Stay cool all summer with fast, professional AC installations
+              built to last.
+            </p>
+            <button
+              class="bg-green-700 hover:bg-green-800 cursor-pointer text-white px-6 py-2 rounded"
+            >
+              Explore Service
+            </button>
+          </div>
+          <div class="bg-gray-50 p-4 rounded-xl">
+            <img
+              src="/assets/images/Frame 92.png"
+              alt="AC Install"
+              class="rounded mb-3"
+            />
+            <h3 class="font-semibold text-2xl mb-2">Heating System Repair</h3>
+            <p class="text-base text-gray-600 mb-2">
+              Keep your home warm and safe with expert repair services for any
+              heating system.
+            </p>
+            <button
+              class="bg-green-700 hover:bg-green-800 cursor-pointer text-white px-6 py-2 rounded"
+            >
+              Explore Service
+            </button>
+          </div>
+          <div class="bg-gray-50 p-4 rounded-xl">
+            <img
+              src="/assets/images/Frame 93.png"
+              alt="AC Install"
+              class="rounded mb-3"
+            />
+            <h3 class="font-semibold text-2xl mb-2">
+              Indoor Air Quality Solutions
+            </h3>
+            <p class="text-base text-gray-600 mb-2">
+              Breathe cleaner, healthier air with advanced filtration and
+              ventilation systems.
+            </p>
+            <button
+              class="bg-green-700 hover:bg-green-800 cursor-pointer text-white px-6 py-2 rounded"
+            >
+              Explore Service
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- our hvac Services Section is end -->
+
+
 
     <!-- js -->
     <script src="./custom.js"></script>
