Meet the People Section is  completed

--- a/src/index.html
+++ b/src/index.html
@@ -792,6 +792,57 @@
 
 
 
+        <!-- Meet the People Section is start -->
+    <section class="bg-white py-16 px-4">
+      <div class="max-w-7xl mx-auto">
+        <h2 class="text-3xl font-bold text-center mb-12">
+          Meet the People Behind the Work
+        </h2>
+        <div
+          class="grid md:grid-cols-[3fr_1.5fr_1.5fr] gap-6 place-items-center"
+        >
+          <div>
+            <img
+              src="/assets/images/Frame 102.png"
+              alt="Team 1"
+              class="rounded mb-4"
+            />
+          </div>
+
+          <div
+            class="border border-green-800 p-8 mx-5 flex flex-col justify-center h-72"
+          >
+            <p class="italic text-gray-700">
+              “My mission is simple — to give every homeowner reliable,
+              efficient comfort they can count on, every day.”
+            </p>
+            <h4 class="mt-2 mb-2 font-medium text-2xl text-green-800">
+              James Carter
+            </h4>
+            <p class="text-sm text-gray-500">
+              Founder & Senior HVAC Specialist
+            </p>
+          </div>
+
+          <div
+            class="border border-green-800 p-8 mx-5 flex flex-col justify-center h-72"
+          >
+            <p class="italic text-gray-700">
+              “I’m here to ensure every project runs smoothly from start to
+              finish...”
+            </p>
+            <h4 class="mt-2 mb-2 font-medium text-2xl text-green-800">
+              Michael Torres
+            </h4>
+            <p class="text-sm text-gray-500">Operations Manager</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Meet the People Section is end -->
+
+
+
     <!-- js -->
     <script src="./custom.js"></script>
   </body>
