--- a/src/index.html
+++ b/src/index.html
@@ -842,6 +842,65 @@
     <!-- Meet the People Section is end -->
 
 
+       <!-- HVAC Insights section is start -->
+    <section class="bg-white py-16 px-4">
+      <div class="max-w-7xl mx-auto">
+        <h2 class="text-3xl font-bold text-center mb-12">HVAC Insights</h2>
+        <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-6">
+          <!-- Blog Card -->
+          <div class="bg-white rounded-xl shadow-md pb-3">
+            <img src="/assets/images/Frame 110.png" class="rounded mb-4" />
+            <div class="p-4">
+              <p class="text-sm text-gray-500 mb-1">25 Apr 2025</p>
+              <h3 class="text-2xl mb-2">5 Signs Your AC Needs Maintenance</h3>
+            </div>
+            <hr />
+
+            <button class="font-medium p-4 mt-2 cursor-pointer">
+              Read More
+            </button>
+          </div>
+          <div class="bg-white rounded-xl shadow-md pb-3">
+            <img src="/assets/images/Frame 111.png" class="rounded mb-4" />
+            <div class="p-4">
+              <p class="text-sm text-gray-500 mb-1">22 Apr 2025</p>
+              <h3 class="text-2xl mb-2">
+                How to Save on Heating Bills This Winter
+              </h3>
+            </div>
+            <hr />
+
+            <button class="font-medium p-4 mt-2 cursor-pointer">
+              Read More
+            </button>
+          </div>
+          <div class="bg-white rounded-xl shadow-md pb-3">
+            <img src="/assets/images/Frame 112.png" class="rounded mb-4" />
+            <div class="p-4">
+              <p class="text-sm text-gray-500 mb-1">22 Apr 2025</p>
+              <h3 class="text-2xl mb-2">
+                The Best Thermostat Settings for Comfort & Efficiency
+              </h3>
+            </div>
+            <hr />
+
+            <button class="font-medium p-4 mt-2 cursor-pointer">
+              Read More
+            </button>
+          </div>
+        </div>
+        <div class="text-center mt-8">
+          <button
+            class="bg-green-700 hover:bg-green-900 cursor-pointer text-white px-6 py-2 rounded"
+          >
+            Explore All Articles
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- HVAC Insights section is end -->
+
+
 
     <!-- js -->
     <script src="./custom.js"></script>
