areas we sserve section is complete

--- a/src/index.html
+++ b/src/index.html
@@ -902,6 +902,112 @@
 
 
 
+        <!-- Areas We Serve section is start -->
+    <section class="bg-white py-16 px-4">
+      <div class="max-w-7xl mx-auto">
+        <h2 class="text-3xl font-bold text-center mb-8">Areas We Serve</h2>
+
+        <div class="flex flex-wrap justify-center gap-4">
+          <!-- Reusable city item -->
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center text-sm md:text-xl justify-center border border-green-600 text-green-700 px-4 py-3  rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Los Angeles
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> San Diego
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> San Jose
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center text-sm md:text-xl justify-center border border-green-600 text-green-700 px-4 py-3  rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> San Francisco
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Sacramento
+          </span>
+
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Phoenix
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Las Vegas
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Denver
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center text-sm md:text-xl justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Kansas City
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Charlotte
+          </span>
+
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-sm md:text-xl rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> San Antonio
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Atlanta
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Jacksonville
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Indianapolis
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Raleigh
+          </span>
+
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Chicago
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Tampa
+          </span>
+          <span
+            class="w-[18%] min-w-[140px] inline-flex items-center justify-center border border-green-600 text-green-700 px-4 py-3 text-lg rounded-full transition-transform hover:scale-105 hover:bg-green-50"
+          >
+            <i class="fa-solid fa-location-dot mr-2"></i> Orlando
+          </span>
+        </div>
+      </div>
+    </section>
+    <!-- Areas We Serve section is end -->
+
+
     <!-- js -->
     <script src="./custom.js"></script>
   </body>
