--- a/src/index.html
+++ b/src/index.html
@@ -1008,6 +1008,90 @@
     <!-- Areas We Serve section is end -->
 
 
+        <!-- footer section is start -->
+    <footer class="bg-green-800 text-white py-16 px-4">
+      <div class="max-w-7xl mx-auto">
+        <!-- CTA -->
+    <div class="bg-white text-green-800 flex flex-col md:flex-row justify-between items-center p-2 rounded-xl relative overflow-hidden h-auto md:h-16">
+  <div class="relative w-full md:w-2/3 mb-2 md:mb-0">
+    <p
+      id="animatedText"
+      class="text-xs md:text-xl ml-2 md:ml-4 font-medium text-center md:text-left"
+      style="transition: all 0.8s ease;"
+    >
+      Let us help you choose the perfect system for your home.
+    </p>
+  </div>
+
+  <button
+    class="text-xs md:text-sm bg-green-700 hover:bg-green-800 text-white px-4 md:px-5 py-2 md:py-3 rounded w-full md:w-auto cursor-pointer"
+  >
+    Free HVAC Estimate
+  </button>
+</div>
+
+
+        <!-- Footer Content -->
+        <div class="grid grid-cols-1 mt-12 md:grid-cols-3 justify-betweengap-10 border-b border-gray-300 pb-6">
+          <div class="sm:justify-start justify-center"> 
+           <div class="text-center md:text-left">
+  <h3 class="text-2xl md:text-4xl font-bold mb-3">CoolQuest</h3>
+  <p class="mb-4 text-sm md:text-base">
+    Trusted local HVAC experts delivering reliable <br />
+    heating and cooling solutions.
+  </p>
+</div>
+
+            <div class="flex gap-4 sm:justify-start justify-center text-center">
+              <a
+                href="https://www.facebook.com/md.abu.tal.ha.206"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <i class="fa-brands fa-facebook text-2xl"></i>
+              </a>
+
+              <a class=" " href="https://github.com/abu-tal-ha" target="_blank"
+                ><i class="fa-brands fa-github text-2xl"></i
+              ></a>
+              <a href="https://www.linkedin.com/in/abu-talha-/" target="_blank"
+                ><i class="fa-brands fa-linkedin text-2xl"></i
+              ></a>
+            </div>
+          </div>
+          <div class="text-center mt-4">
+            <h4 class="font-semibold text-lg mb-3">Quick links</h4>
+            <ul class="space-y-3 text-base">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">FAQs</a></li>
+            </ul>
+          </div>
+          <div class="ml-6">
+            <h4 class="font-semibold mb-3">Contact</h4>
+            <p class="text-base mb-3">
+              <i class="fa-solid fa-phone"></i> (555) 123-4567
+            </p>
+            <p class="text-base mb-3">
+              <i class="fa-solid fa-envelope"></i> mail@coolquest.com
+            </p>
+            <p class="text-base mb-3">
+              <i class="fa-solid fa-location-dot"></i> 1234 Maplewood Drive,
+              Houston, <br />
+              TX 77002, United States
+            </p>
+          </div>
+        </div>
+        <p class="text-center text-sm text-white mt-12">
+          &copy; 2025 all rights reserved
+        </p>
+      </div>
+    </footer>
+    <!-- footer section is end -->
+
+
     <!-- js -->
     <script src="./custom.js"></script>
   </body>
